# rct

./: README.md  README.md~  daily-script.sh~
higgs/: README.txt
higgs/branches/CORBA/code/LowLevelControl/src/: CMakeLists.txt  LowLevelControl_impl.cpp
higgs/branches/CORBA/code/WorldModel/src/: CMakeLists.txt  WorldModel_impl.cpp  WorldModel_impl.h
higgs/branches/CORBA/code/devices/wrist/src/: CMakeLists.txt  Exception.cc  Exception.h  SerialLinkRS232.cc  SerialLinkRS232.h  WristTestInit.cc  powercube_telegram.cc  powercube_telegram.h  powercube_telegram_def.h  wrist.cc  wrist.h  wrist_client.cc  wrist_client_mouse_grab.cc  wrist_server.cc
higgs/branches/CORBA/code/dumb_virtual_higgs/: .cproject  .project  CMakeLists.txt  main.cc  servants.cc  servants.h
higgs/branches/CORBA/code/lib/: CMakeLists.txt  CORBA_utils.h  IDL_command.cmake  README
higgs/branches/CORBA/tags/code_some_version/control_libraries/src/: CMakeLists.txt  EKalman.cpp  EKalman.h  HiggsModels.cpp  HiggsModels.h  ObservationModel.cpp  ObservationModel.h  PredictionModel.cpp  PredictionModel.h  simpleEKalman.cpp
higgs/branches/CORBA/tags/code_v0.1/devices/arduino/client/: CMakeLists.txt  arduino_client.cc  arduino_client.sh
higgs/branches/CORBA/tags/code_v0.1/devices/camera/client/: CMakeLists.txt
higgs/branches/CORBA/tags/code_v0.1/devices/camera/client/matlab/: load_rgb.m  rojo.m
higgs/branches/CORBA/tags/code_v0.1/devices/gps/src/: CMakeLists.txt  SerialLinkRS232.cc  SerialLinkRS232.h  gps.cc  gps.h  gps_client.cc  gps_client.sh  gps_server.cc  gps_server.sh
higgs/branches/CORBA/tags/code_v0.1/devices/laser/src/: CMakeLists.txt  PortCOM.cpp  PortCOM.h  ProtLMS.cpp  ProtLMS.h  laser_client.cc  laser_client.sh  laser_server.cc  laser_server.sh
higgs/branches/ros-electric/aslab_stage_erratic/: .odom.swp  complete.vcg  manifest.xml  stage.vcg
higgs/branches/ros-electric/create_patrol_mission/: mainpage.dox  manifest.xml  patrol_map.vcg
higgs/branches/ros-electric/higgs_drivers_electric/: stack.xml
higgs/branches/ros-electric/higgs_drivers_electric/higgs_arduino_corba_ros/: CMakeLists.txt
higgs/branches/ros-electric/higgs_drivers_electric/higgs_arduino_corba_ros/launch/: arduino.launch
higgs/branches/ros-electric/higgs_drivers_electric/higgs_arduino_corba_ros/src/idl_compiled/: ArduinoS.cpp  CosNamingC.cpp  CosNamingS.h  CosNamingS.inl
higgs/branches/ros-electric/higgs_stage_sim/: manifest.xml
higgs/branches/ros-fuerte/Meta_IO_py/: cmake_install.cmake  mainpage.dox  manifest.xml
higgs/branches/ros-fuerte/higgs_navigation/: README.txt  manifest.xml
higgs/branches/ros-fuerte/higgs_stage_simulation/: README.txt  manifest.xml
higgs/branches/ros-fuerte/meta_msgs/: .cproject  .project  .pydevproject  cmake_install.cmake  mainpage.dox  manifest.xml
higgs/branches/ros-fuerte/mission_manager/: mainpage.dox  manifest.xml  mission.launch
higgs/branches/ros-fuerte/org.aslab.tests.nodeslistener/: .classpath  .project  README.txt  build.gradle  mainpage.dox  manifest.xml
higgs/branches/ros-groovy/higgs_gazebo_simulation/: .project  readme.txt
higgs/docs/Higgs-system-summary-cheatsheet/: .project
higgs/docs/R-2010-008 Higgs Manual/: .project  .texlipse  R-2010-008 Higgs Manual.tex  bibliography.bib  higgsasys.tex  higgsdevelopermanual.tex  higgsrct.tex  higgsspecification.tex  higgsusermanual.tex  higgswebots.tex  introduction.tex
higgs/docs/R-2010-008 Higgs Manual/figures/: RCT_ModulesPowerBoardPhoto.xcf
higgs/hardware/power board/: FIXME  HIGGS_POWER_BOARD.BOM  HIGGS_POWER_BOARD.DSN  HIGGS_POWER_BOARD.LLB  HIGGS_POWER_BOARD.MAX  HIGGS_POWER_BOARD.MNL  README.txt  bom.txt  f1.opj  higgs_power_board.opj
higgs/sims/USARSim/VHiggsUI/: CmdSocket.cpp  CmdSocket.h  ControlDlg.cpp  ControlDlg.h  Info.html  InfoDlg.cpp  InfoDlg.h  MessageParser.cpp  MessageParser.h  ReadMe.txt  SimpleUI.aps  SimpleUI.clw  SimpleUI.cpp  SimpleUI.dsp  SimpleUI.dsw  SimpleUI.h  SimpleUI.opt  SimpleUI.plg  SimpleUI.rc  SimpleUI.sln  SimpleUI.vcproj  SimpleUIDlg.cpp  SimpleUIDlg.h  StdAfx.cpp  StdAfx.h  VideoSocket.cpp  VideoSocket.h  resource.h  webbrowser2.h
higgs/sims/USARSim/higgs_usarsim_doc/: Controller.ppt  Protocol_examples.doc  USARSim_Controladores.doc
higgs/tags/ROS_v1.0_navigation/Higgs_setup_tf/: CMakeLists.txt  frames.gv  manifest.xml
higgs/tags/ROS_v1.0_navigation/ROSARIA/: RosAria.cpp
higgs/tags/ROS_v1.0_navigation/erratic_stage_2dnav/: .project
higgs/tags/ROS_v1.0_navigation/higgs_map_building/: .cproject  .project  .pydevproject  cmake_install.cmake  frames.gv  manifest.xml  mylaserdata.orig.bag  trial.launch
higgs/tags/ROS_v1.0_navigation/higgs_navigation/: CMakeLists.txt  higgs_nav_kinect.vcg
higgs/tags/ROS_v1.0_navigation/higgs_teleop/: frames.gv  higgs.vcg  higgs_observe_map.vcg  mainpage.dox  manifest.xml
higgs/tags/ROS_v1.0_navigation/higgs_wiimote/: manifest.xml
higgs/tags/ROS_v1.0_navigation/teleop_base/: manifest.xml  teleop_base.cpp
higgs/tags/ROS_v1.1_higgs_navigation/: higgs_localization.vcg
higgs/tags/ROS_v1.1_higgs_navigation/config_nav/: amcl_node.xml  base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
higgs/tags/ROS_v1.1_higgs_navigation/config_rviz/: higgs_nav_kinect.vcg
higgs/tags/ROS_v1.1_higgs_navigation/launch/: desktop.launch  higgs_drivers.launch  higgs_nav_global.launch  higgs_nav_odom.launch  simple.launch
higgs/tags/ROS_v1.1_higgs_navigation/navigation_config/: costmap_common_params.yaml  move_base_global.xml
higgs/tags/ROS_v1.1_higgs_navigation/navigation_local/: global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml  move_base_params.yaml
higgs/trunk/models/Higgs_model/: .project  ASysElements.efx  Analysis.efx  ComponentsExample.emx  Design.efx  DetailedImplementation.efx  DomainArchitecture.efx  FunctionsExample.emx  Hardware.efx  HiggsComponentsModel.efx  HiggsEngineeringModel.emx  HiggsRunningModel.emx  InstancesModel.efx  MetaArchitecture.efx  MetaControlImplementation.emx  README.txt  ROS_Profile.epx  Software.efx  (+3 more)
mrt/: README.md
(+690 files in other folders)
